--- a/share/goodie/css_animations/demo_0/style.css
+++ b/share/goodie/css_animations/demo_0/style.css
@@ -4,7 +4,7 @@
 }
 .tile--css_animations__demo1 div {
     padding: 40px;
-    font-size: 45px;
+    font-size: 36px;
     font-family: 'Monoton', cursive;
     text-align: center;
     text-transform: uppercase;
